--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,49 @@
+/* 
+
+
+---01 TYPOGRAPHY SYSTEM
+
+Font Sizes (px):
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+
+Font Weights:
+Default: 400
+
+Line Heights:
+Default: 1
+
+
+
+---02 COLORS
+
+Primary: #e67e22
+
+Tints:
+Shades:
+Accents:
+Greys:
+#555
+
+
+---03 SHADOWS
+
+
+---04 BORDER RADIUS
+
+
+---05 WHITESPACE
+
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+
+
+
+
+
+
+*/
+
 * {
   padding: 0;
   margin: 0;
