--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,13 @@ Default: 1
 
 Primary: #e67e22
 
-Tints:
+Tints: #cf711f
 Shades:
 Accents:
 Greys:
 #555
+#333
+
 
 
 ---03 SHADOWS
@@ -58,10 +60,15 @@ html {
 }
 
 body {
-  font-family: "sans-serif";
+  font-family: sans-serif;
   line-height: 1;
   font-weight: 100;
   color: #555;
+}
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 9.6rem 0;
 }
 
 .hero {
@@ -69,8 +76,71 @@ body {
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.6;
+  margin-bottom: 3.2rem;
+}
+
+.btn:link,
+.btn:active {
+  display: inline-block;
+
+  text-decoration: none;
+  font-size: 2rem;
+  padding: 1.6rem 3.2rem;
+  border-radius: 150px;
+
+  /* transition in orignal *state* */
+  transition: background-color 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+  color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+  color: #fff;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+  color: #555;
+
+  /* border: 3px solid #fff; */
+
+  /* add border inside*/
+  box-shadow: inset 0 0 0 3px #fff;
 }
 
 .hero-img {
   width: 100%;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
 }
