--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,15 @@ Font Sizes (px):
 
 Font Weights:
 Default: 400
+Medium:500
+Semi-bold:600
+Bold:700
+
 
 Line Heights:
 Default: 1
+Small:1.05
+Paragraph-default:1.6
 
 
 
@@ -31,7 +37,7 @@ Greys:
 
 
 ---04 BORDER RADIUS
-
+DEfault: 9px
 
 ---05 WHITESPACE
 
@@ -86,7 +92,7 @@ body {
   text-decoration: none;
   font-size: 2rem;
   padding: 1.6rem 3.2rem;
-  border-radius: 150px;
+  border-radius: 9px;
   font-weight: 600;
 
   /* transition in orignal *state* */
@@ -131,16 +137,56 @@ body {
 /********************/
 .header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   background-color: #fdf2e9;
 
   /*STICKY LATER*/
   height: 9.6rem;
   padding: 0 4.8rem;
+  /* padding-top: 2.4rem; */
 }
 
 .logo {
   height: 2.2rem;
+}
+/*******************************/
+/*******NAVIGIGATION***********/
+/*******************************/
+.main-nav-list {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+  display: inline-block;
+
+  text-decoration: none;
+  color: #333;
+  font-weight: 800;
+  font-size: 1.8rem;
+  transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+  color: #e67e22;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+  padding: 1.2rem 2.4rem;
+  border-radius: 9px;
+  color: #fff;
+  background-color: #e67e22;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+  background-color: #cf711f;
 }
 
 /********************/
