--- a/css/style.css
+++ b/css/style.css
@@ -1,137 +1,3 @@
-/* 
-
-
----01 TYPOGRAPHY SYSTEM
-
-Font Sizes (px):
-10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
-
-Font Weights:
-Default: 400
-Medium:500
-Semi-bold:600
-Bold:700
-
-
-Line Heights:
-Default: 1
-Small:1.05
-Paragraph-default:1.6
-
-
-
----02 COLORS
-
-Primary: #e67e22
-
-Tints: #cf711f
-Shades:
-Accents:
-Greys:
-#555
-#333
-
-
-
----03 SHADOWS
-
-
----04 BORDER RADIUS
-DEfault: 9px
-
----05 WHITESPACE
-
-SPACING SYSTEM (px)
-2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
-
-
-
-
-
-
-
-*/
-
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-html {
-  /* font-size: 10px; */
-  /* 10px / 16px = 0.625 => 62.5% */
-  /*percentage of user's browser font-size-setting */
-  font-size: 62.5%;
-}
-
-body {
-  font-family: "Rubik", sans-serif;
-  line-height: 1;
-  font-weight: 400;
-  color: #555;
-}
-
-/********************/
-/*GENERAL COMPONENTS*/
-/********************/
-
-.heading-primary {
-  font-size: 5.2rem;
-  font-weight: 700;
-  line-height: 1.05;
-  color: #333;
-  letter-spacing: -0.5px;
-  margin-bottom: 3.2rem;
-}
-
-.btn:link,
-.btn:active {
-  display: inline-block;
-
-  text-decoration: none;
-  font-size: 2rem;
-  padding: 1.6rem 3.2rem;
-  border-radius: 9px;
-  font-weight: 600;
-
-  /* transition in orignal *state* */
-  transition: background-color 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-  background-color: #e67e22;
-  color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-  background-color: #cf711f;
-  color: #fff;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-  background-color: #fff;
-  color: #555;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-  background-color: #fdf2e9;
-  color: #555;
-
-  /* border: 3px solid #fff; */
-
-  /* add border inside*/
-  box-shadow: inset 0 0 0 3px #fff;
-}
-
-.margin-right-sm {
-  margin-right: 1.6rem !important;
-}
-
 /********************/
 /*HEADER*/
 /********************/
@@ -248,4 +114,33 @@ body {
 
 .delivered-text span {
   color: #cf711f;
+}
+
+/************************/
+/*HOW IT WORKS SECTION*/
+/************************/
+
+.section-how {
+  padding: 9.6rem 0;
+}
+
+.step-number {
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description {
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
+
+.step-img-box {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.step-img {
+  width: 35%;
 }
