--- a/css/style.css
+++ b/css/style.css
@@ -466,3 +466,42 @@
   font-size: 1.8rem;
   line-height: 1.8;
 }
+
+/************************/
+/**CTA SECTION**/
+/************************/
+
+.section-cta {
+  padding: 9.6rem 0;
+}
+
+.cta {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  background-color: #e67e22;
+  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.15);
+  border-radius: 11px;
+
+  background-image: linear-gradient(
+    to right bottom,
+    hsl(28, 80%, 61%),
+    #e67e22
+  );
+  /* tmp */
+  height: 50rem;
+  overflow: hidden;
+}
+
+.cta-img-box {
+  background-image: linear-gradient(
+      to right bottom,
+      rgba(239, 151, 78, 0.35),
+      rgba(235, 125, 34, 0.35)
+    ),
+    url("../img/eating.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.cta-text-box {
+}
