--- a/css/style.css
+++ b/css/style.css
@@ -556,3 +556,11 @@
   outline-offset: 8px; */
   box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.51);
 }
+
+/**********************************/
+/***FOOTER***/
+/**********************************/
+
+.footer {
+  padding: 9.6rem 0;
+}
