footer section enhancement

--- a/css/general.css
+++ b/css/general.css
@@ -32,6 +32,9 @@ Tints: #cf711f
 Shades:
 Accents:
 Greys:
+#888
+#767676 (lightest allowed on #fff)
+#6f6f6f (lightest allowed on #fdf2e9)
 #555
 #333
 
